--- a/wp-content/themes/analog/app/scss/_variables.scss
+++ b/wp-content/themes/analog/app/scss/_variables.scss
@@ -10,15 +10,15 @@ $text-base-fallback: 16px;
 $text-base: 1.6rem;
 $text-lg-fallback: 18px;
 $text-lg: 1.8rem;
-$text-xl-fallback: 22px;
-$text-xl: 2.2rem;
-$text-2xl-fallback: 26px;
-$text-2xl: 2.6rem;
+$text-xl-fallback: 20px;
+$text-xl: 2rem;
+$text-2xl-fallback: 24px;
+$text-2xl: 2.4rem;
 $text-3xl-fallback: 30px;
 $text-3xl: 3rem;
-$text-4xl-fallback: 36px;
-$text-4xl: 3.6rem;
-$text-5xl-fallback: 44px;
-$text-5xl: 4.4rem;
+$text-4xl-fallback: 34px;
+$text-4xl: 3.4rem;
+$text-5xl-fallback: 42px;
+$text-5xl: 4.2rem;
 $text-6xl-fallback: 80px;
 $text-6xl: 8rem;
