--- a/wp-content/themes/analog/public/css/style.css
+++ b/wp-content/themes/analog/public/css/style.css
@@ -41,23 +41,22 @@ h3 {
 }
 
 h1 {
-  font-size: 44px;
-  font-size: 4.4rem;
+  font-size: 42px;
+  font-size: 4.2rem;
   line-height: 44px;
   text-align: center;
   color: #fff1cc;
+  margin-bottom: 1.6rem;
 }
 @media (min-width: 40em) {
   h1 {
     line-height: 60px;
-    margin-bottom: 1.6rem;
   }
 }
 @media (min-width: 64em) {
   h1 {
     font-size: 80px;
     font-size: 8rem;
-    margin-bottom: 2rem;
   }
 }
 
@@ -69,9 +68,9 @@ h2 {
 }
 @media (min-width: 40em) {
   h2 {
-    font-size: 44px;
-    font-size: 4.4rem;
-    line-height: 40px;
+    font-size: 42px;
+    font-size: 4.2rem;
+    line-height: 52px;
   }
 }
 @media (min-width: 64em) {
@@ -81,33 +80,30 @@ h2 {
 }
 
 h3 {
-  font-size: 26px;
-  font-size: 2.6rem;
-  line-height: 36px;
+  font-size: 24px;
+  font-size: 2.4rem;
+  line-height: 28px;
+  margin-bottom: 1.2rem;
 }
-@media (min-width: 40em) {
+@media (min-width: 64em) {
   h3 {
-    font-size: 36px;
-    font-size: 3.6rem;
-    line-height: 40px;
+    font-size: 34px;
+    font-size: 3.4rem;
+    line-height: 44px;
   }
 }
 
 h4 {
-  font-size: 22px;
-  font-size: 2.2rem;
+  font-size: 20px;
+  font-size: 2rem;
   line-height: 24px;
-}
-@media (min-width: 40em) {
-  h4 {
-    font-size: 26px;
-    font-size: 2.6rem;
-  }
+  margin-bottom: 1.6rem;
 }
 @media (min-width: 64em) {
   h4 {
-    font-size: 30px;
-    font-size: 3rem;
+    font-size: 24px;
+    font-size: 2.4rem;
+    line-height: 28px;
   }
 }
 
@@ -559,6 +555,9 @@ body {
 .more {
   padding-bottom: unset;
 }
+.more__heading {
+  text-align: center;
+}
 .more__heading, .more__description {
   grid-column: 1/5;
 }
@@ -657,7 +656,7 @@ body {
   }
 }
 .events__sticky {
-  grid-column: 1/5;
+  grid-column: 2/4;
   text-align: center;
   margin-bottom: 6rem;
 }
@@ -670,7 +669,7 @@ body {
 @media (min-width: 64em) {
   .events__sticky {
     text-align: start;
-    grid-column: 2/5;
+    grid-column: 2/4;
     margin-bottom: unset;
     padding-top: 3rem;
   }
@@ -679,6 +678,12 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 35vh;
+  margin-bottom: unset;
+}
+@media (min-width: 64em) {
+  .events__sticky h3 {
+    max-width: 16ch;
+  }
 }
 .events__col1, .events__col2 {
   text-align: center;
@@ -693,12 +698,18 @@ body {
   display: flex;
   flex-direction: column;
   background-color: blue;
-  row-gap: 6rem;
+  row-gap: 8rem;
 }
 @media (max-width: 63.9375em) {
   .events__col1 {
     margin-bottom: 8rem;
     row-gap: 8rem;
+  }
+}
+@media (max-width: 39.9375em) {
+  .events__col1 {
+    margin-bottom: 6rem;
+    row-gap: 6rem;
   }
 }
 @media (min-width: 64em) {
@@ -781,7 +792,12 @@ body {
   text-decoration: none;
 }
 .footer__long {
-  grid-column: 2/12;
+  grid-column: 1/5;
+}
+@media (min-width: 40em) {
+  .footer__long {
+    grid-column: 2/12;
+  }
 }
 @media (min-width: 64em) {
   .footer__long {
